--- a/assets/style/custom.css
+++ b/assets/style/custom.css
@@ -274,7 +274,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border-radius: 6px 6px 6px 0;
+	border-radius: 6px;
 	transition: 150ms ease;
 	padding: 12px;
 }
